# latexml-oxide

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  HANDOFF.md  KNOWN_PERL_ERRORS.md  Makefile  README.md  SYNC_STATUS.md  THIRD-PARTY-NOTICES  about.hbs  about.toml  ar5iv-bindings  body2.tex  crates.js  deny.toml  easy_rerun_failures_list.txt  fix_mathchar.py  help.html  rust-toolchain.toml  rustfmt.toml  search-index.js  settings.html  source-files.js  src-files.js  test_3clause.tex
latexml_codegen/: Cargo.toml  all.html  derive.CompileExpansion.html  derive.CompilePrototype.html  derive.CompilePrototypeFor.html  derive.CompileReplacement.html  derive.CompileTokens.html  derive.CompileTokensInternal.html  derive.GlobTeXTests.html  derive.LoadModel.html  index.html
latexml_contrib/: Cargo.toml  all.html  constant.BINDINGS.html  fn.binding_names.html  fn.class_binding_names.html  fn.dispatch.html  index.html  sidebar-items.js  type.BindingLoader.html
latexml_core/: Cargo.toml  all.html  build.rs  enum.TexMode.html  fn.ensure_libxml_init.html  fn.reset_thread_engine.html  index.html  macro.AssignRegister.html  macro.CharToken.html  macro.Debug.html  macro.DebugFeature.html  macro.Error.html  macro.Explode.html  macro.ExplodeChars.html  macro.ExplodeText.html  macro.Fatal.html  macro.Font.html  macro.FontDirective.html  macro.Info.html  macro.NewDefault.html  macro.NewDefaultV.html  macro.Note.html  macro.NoteLog!.html  macro.NoteLog.html  macro.Number.html  macro.Roman.html  macro.SetCounter.html  macro.SymExplodeText.html  macro.T_ACTIVE!.html  macro.T_ACTIVE.html  macro.T_ALIGN.html  macro.T_ARG.html  macro.T_BEGIN.html  macro.T_COMMENT.html  macro.T_CR.html  macro.T_CS.html  macro.T_END.html  macro.T_LETTER.html  macro.T_MARKER.html  macro.T_MATH.html  (+72 more)
latexml_engine/: Cargo.toml  all.html  build.rs  index.html  macro.AddToCounter.html  macro.AddToMacro!.html  macro.AddToMacro.html  macro.AssignCatcode.html  macro.AssignMapping!.html  macro.AssignMapping.html  macro.AssignMeaning!.html  macro.AssignMeaning.html  macro.AssignValue!.html  macro.AssignValue.html  macro.BeginItemize!.html  macro.BeginItemize.html  macro.CounterValue!.html  macro.CounterValue.html  macro.DeclareFontMap.html  macro.DeclareFontMapMultichar.html  macro.DeclareOption.html  macro.DefAccent!.html  macro.DefAccent.html  macro.DefColumnType!.html  macro.DefColumnType.html  macro.DefConditional.html  macro.DefConstructor.html  macro.DefEnvironment!.html  macro.DefEnvironment.html  macro.DefEnvironmentIWO!.html  macro.DefEnvironmentIWO.html  macro.DefEnvironmentWO!.html  macro.DefEnvironmentWO.html  macro.DefKeyVal.html  macro.DefLigature!.html  macro.DefLigature.html  macro.DefMacro.html  macro.DefMath.html  macro.DefMathRewrite!.html  macro.DefMathRewrite.html  (+126 more)
latexml_math_parser/: Cargo.toml  all.html  fn.get_grammatical_role.html  fn.node_to_grammar_lexemes.html  fn.report_and_reset_asf_stats.html  fn.text_form.html  index.html  macro.default_registry.html  macro.log_math_error!.html  macro.log_math_error.html  macro.log_math_info!.html  macro.log_math_info.html  macro.log_math_warn!.html  macro.log_math_warn.html  macro.register.html  macro.registry!.html  macro.registry.html  macro.rule.html  macro.rules.html  macro.start!.html  macro.start.html  macro.token.html  macro.unp.html  sidebar-items.js  struct.MathParser.html
latexml_oxide/: Cargo.toml  all.html  build.rs  fn.assemble_conversion_log.html  fn.custom_alloc_error_hook.html  fn.ensure_parent_dir.html  fn.extract_flag.html  fn.find_main_tex.html  fn.is_xml_input.html  fn.main.html  fn.make_splitpaths.html  fn.pack_output_zip.html  fn.parse_readme_json.html  fn.read_child_rusage_us.html  fn.read_max_rss_kb.html  fn.real_main.html  fn.run_post_processing.html  fn.unpack_archive.html  fn.write_telemetry_record.html  index.html  sidebar-items.js  static.GLOBAL.html  struct.Cli.html  struct.PostOptions.html
latexml_package/: Cargo.toml  all.html  build.rs  constant.BINDINGS.html  fn.binding_names.html  fn.class_binding_names.html  fn.dispatch.html  index.html  macro.AddToCounter!.html  macro.AddToCounter.html  macro.AddToMacro.html  macro.AssignCatcode.html  macro.AssignMapping.html  macro.AssignMeaning.html  macro.AssignValue.html  macro.BeginItemize.html  macro.CounterValue.html  macro.DeclareFontMap.html  macro.DeclareFontMapMultichar!.html  macro.DeclareFontMapMultichar.html  macro.DeclareOption!.html  macro.DeclareOption.html  macro.DefAccent.html  macro.DefColumnType.html  macro.DefConditional!.html  macro.DefConditional.html  macro.DefConstructor!.html  macro.DefConstructor.html  macro.DefEnvironment.html  macro.DefEnvironmentIWO.html  macro.DefEnvironmentWO.html  macro.DefKeyVal!.html  macro.DefKeyVal.html  macro.DefLigature.html  macro.DefMacro.html  macro.DefMath!.html  macro.DefMath.html  macro.DefMathRewrite.html  macro.DefParameterType.html  macro.DefParameterTypeWO!.html  (+94 more)
latexml_post/: Cargo.toml  all.html  build.rs  index.html  macro.Error.html  macro.Fatal!.html  macro.Fatal.html  macro.Info.html  macro.Note.html  macro.Warn.html  macro.log_post_error!.html  macro.log_post_error.html  macro.log_post_fatal!.html  macro.log_post_fatal.html  macro.log_post_info!.html  macro.log_post_info.html  macro.log_post_warn!.html  macro.log_post_warn.html  sidebar-items.js  struct.Post.html  struct.PostStatus.html
rtx/: Cargo.toml  all.html  index.html  macro.tex_tests!.html  macro.tex_tests.html  sidebar-items.js
rtx_codegen/: Cargo.toml  all.html  derive.BoundState.html  derive.CompileExpansion.html  derive.CompilePrototype.html  derive.CompilePrototypeFor.html  derive.CompileReplacement.html  derive.CompileTokens.html  derive.CompileTokensInternal.html  derive.EndStateFrame.html  derive.GlobTeXTests.html  derive.LoadModel.html  derive.StartStateFrame.html  index.html  sidebar-items.js
rtx_contrib/: Cargo.toml  all.html  fn.dispatch.html  index.html  sidebar-items.js
rtx_core/: Cargo.toml  all.html  enum.DigestedData.html  enum.TexMode.html  index.html  macro.CharToken.html  (+116 more)
(+51056 files in other folders)
