[workspace]
members = [
  "latexml_core",
  "latexml_codegen",
  "latexml_engine",
  "latexml_package",
  "latexml_math_parser",
  "latexml_contrib",
  "latexml_oxide",
  "latexml_post"
]
resolver = "2"

[profile.release]
# Distribution-grade. Best practice for "ship to users / deploy /
# benchmark" — maximize runtime performance, minimize binary size,
# accept any build-time cost. Anyone running `cargo build --release`
# (Cortex worker deployment, downstream packaging, perf measurement)
# gets reproducible, fully-optimized binaries.
#
# Knobs (each chosen per Rust release-profile best-practice):
#
#   opt-level = 3
#       Full LLVM optimization. Default for `release`, kept explicit.
#
#   lto = "fat"
#       Whole-program link-time optimization across the entire
#       dep graph. Biggest single perf win for latexml's hot
#       tokenizer/digester/math-parser loops (cross-crate inlining
#       + DCE) and shrinks the final binary by ~30 % vs no-LTO.
#       Costs minutes of link time + several GB of RAM, which is
#       exactly the trade we want for a release build.
#
#   codegen-units = 1
#       One LLVM module per crate = LLVM sees the whole crate at
#       once → maximum intra-crate inlining + DCE + global opts.
#       Slowest compile, fastest output. Combined with `lto = "fat"`,
#       gives the LLVM optimizer the largest possible scope.
#
#   panic = "unwind" (default)
#       We do NOT set `panic = "abort"` — `pericortex`, a third-
#       party git dependency pulled in by `cortex_worker`, is
#       built against `panic_unwind` and won't link otherwise:
#         error: the linked panic runtime `panic_unwind` is not
#         compiled with this crate's panic strategy `abort`
#       Until pericortex (and the rest of our dep graph) is
#       audited for unwind dependencies, keeping the default is
#       the only thing that lets `cargo build --release --bin
#       cortex_worker` succeed. The unwind-table cost is small
#       compared to lto+codegen-units=1.
#
#   strip = "symbols"
#       Strip ALL non-essential ELF symbol and debug data from the
#       output for smallest binary. Coupled with `debug = false`,
#       removes both line tables and symbol names.
#
#   debug = false
#       No DWARF emitted in the first place — saves rustc work
#       upstream of `strip`.
#
#   incremental = false
#       Incremental release artifacts skew optimization decisions
#       across runs and defeat the point of an LTO build.
#
#   overflow-checks = false
#       Default for `release`, kept explicit. Integer wrap is safe
#       in the hot paths and the check is a non-trivial cost on
#       arithmetic-heavy loops.
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = false
incremental = false
overflow-checks = false

# Test profile — local `cargo test`. Optimised for *diagnosability*,
# not for build speed or RAM economy. Devs typically have 32-64 GB
# RAM, fast SSDs, and want the richest debugger experience when a
# test panics, fails an assertion, or shows a regression. Use as much
# RAM and CPU as needed.
#
# Settings (best practice for "make every failure easy to diagnose"):
#
#   opt-level = 1
#       Minimum non-zero optimization. Keeps test runtime tolerable
#       for our regression-heavy suite (full TeX inputs through
#       digester + math parser; -O0 makes whole-test-suite runs
#       multiple × longer). Stops short of -O2/-O3 because
#       higher levels inline aggressively, which makes `RUST_BACKTRACE
#       =1` traces less informative (frames merged, parameters
#       missing) and breaks gdb single-step on the merged frames.
#
#   debug = "full" / debug-assertions = true / overflow-checks = true
#       Maximum diagnostic information. `debug = "full"` (== `2`)
#       includes types, locals, line numbers, scope info — what you
#       want when stepping in gdb/lldb or reading a panic.
#       `debug-assertions` keeps `debug_assert!(...)` live (catch
#       invariant violations during testing). `overflow-checks`
#       traps signed integer overflow as a panic so we see the
#       offending math instead of silently wrapping.
#
#   incremental = true
#       Devs run `cargo test` over and over. Incremental rebuilds
#       reuse per-CGU artifacts on single-file edits, cutting
#       iteration time by 5-10×.
#
#   split-debuginfo = "unpacked"
#       Move the heavy DWARF tables out of the test executable into
#       sibling .o.dwo files. Faster relinking on tiny edits, and
#       gdb still finds them via `add-auto-load-safe-path`.
#
#   panic = "unwind"
#       libtest's harness uses `catch_unwind` to attribute panics
#       to specific tests rather than aborting the whole process.
#       Required.
#
# codegen-units, lto: inherit cargo's `dev` defaults (256 / off) —
# both already aligned with "fastest local rebuild" and require no
# explicit override.
[profile.test]
opt-level = 1
debug = "full"
debug-assertions = true
overflow-checks = true
incremental = true
split-debuginfo = "unpacked"
panic = "unwind"

# CI profile — GitHub Actions ubuntu-latest (4 vCPU / 16 GB RAM /
# 50 min). Single goal: prove the test suite passes, using the
# absolute minimum compile work and RAM. Not a deployment artifact;
# nobody benchmarks or distributes from this profile.
#
# Used by `cargo test --profile ci` from `.github/workflows/CI.yml`.
# Distinct from `[profile.test]` because local-dev machines have far
# more RAM (32-64 GB) and benefit from -O2 runtime speed, while CI
# wants the cheapest possible build.
#
# Settings, all chosen for "lowest RAM × fastest build, tests still pass":
#
#   inherits = "dev"
#       The dev profile already optimises for compile speed
#       (codegen-units = 256, opt-level = 0). We start from there
#       and just turn off debug info we don't need.
#
#   opt-level = 0
#       Skip the LLVM optimization phase entirely. This is the
#       biggest single RAM and time saver. The runtime cost (tests
#       run a few × slower) is far less than the build-time cost
#       of running -O1+ over the whole dep graph.
#
#   debug = false / strip = "symbols"
#       No DWARF, no symbol table — every byte saved on rustc
#       output is RAM not held during link, and disk not written.
#       CI doesn't need backtraces with line numbers; `RUST_BACKTRACE
#       =1` in CI.yml still prints frame addresses if a test panics.
#
#   codegen-units = 256
#       Maximum split = smallest per-CGU IR = lowest peak rustc
#       RSS. rustc's internal parallelism is capped at num_cpus = 4
#       on the runner, so "many tiny CGUs" only helps RAM (only 4
#       are in flight at once per rustc).
#
#   lto = false
#       LTO would defeat the whole point — pulls every CGU back
#       into one big module at link time, doubles peak RAM.
#
#   incremental = false
#       No reuse benefit on CI's cold-cache path; incremental files
#       just consume disk + complicate the per-CGU split.
#
#   panic = "unwind"
#       libtest's `catch_unwind` reports each panicking test
#       individually instead of aborting the whole process. Without
#       this, the first panic loses the rest of the test output —
#       and CI surfaces nothing useful when the runner SIGABRTs.
#
# Past CI failures (runs 25051556164, 25055232786) OOM-killed exit
# 143 inside `latexml_contrib`'s LLVM optimization phase. With
# opt-level=0 globally there IS no LLVM optimization phase to OOM in
# — that whole class of failures goes away. No per-package overrides
# needed.
[profile.ci]
inherits = "dev"
opt-level = 0
codegen-units = 256
lto = false
incremental = false
debug = false
strip = "symbols"
panic = "unwind"

# release-light — local-iteration release profile. Same opt-level=3
# code, but uses thin LTO + parallel codegen so wall-clock build time
# is typically 2-3× faster than `release`. Use this for day-to-day
# perf work, sandbox runs, and local benchmarking. Reserve `release`
# for distribution / final perf-of-record measurements where the last
# few percent of fat-LTO matter.
#
# Knobs vs `release`:
#
#   lto = "thin"
#       Cross-crate LTO using LLVM's ThinLTO. Each crate's IR is
#       summarized and a parallel "import" phase pulls in the hot
#       cross-crate inlining opportunities. ~95-100% of fat-LTO's
#       runtime perf in our hot paths (tokenizer/digester/math
#       parser) at a fraction of the link cost.
#
#   codegen-units = 16
#       Per-crate codegen runs in 16 parallel chunks. With thin LTO
#       still enabled, the cross-unit boundaries don't hurt final
#       performance — ThinLTO re-imports across them. With fat LTO
#       (in `release`) this knob doesn't change runtime perf either,
#       but here we use it so the full pre-LTO compile parallelizes
#       across cores. Ryzen/Intel desktop CPUs see near-linear
#       speedup on the per-crate codegen step.
#
#   strip / debug / incremental / overflow-checks / panic / opt-level:
#       inherited from `release` unchanged.
[profile.release-light]
inherits = "release"
lto = "thin"
codegen-units = 16

