[package]
name = "latexml_codegen"
version = "0.3.0"
edition = "2021"
license = "CC0"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
description = "Syntax extension plugins for LaTeXML's binding language"

[lib]
name = "latexml_codegen"
proc-macro = true

[dependencies]
syn = "2"
proc-macro2 = "1.0.0"
quote = "1.0"
once_cell = "1.17.0"
regex = "1.7.1"
glob = "0.3"
# Enable `codegen` feature so `latexml_core` exposes its
# `impl ToTokens for ...` blocks (used by our `quote!` invocations to
# splice runtime values into generated code). Audit DEP-14 (2026-05-18):
# resolver v2 keeps proc-macro features isolated, so the runtime
# `latexml_core` does NOT inherit this feature.
latexml_core = { path = "../latexml_core", features = ["codegen"] }