[package]
name = "latexml_contrib"
version = "0.3.0"
edition = "2024"
license = "CC0-1.0"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
description = "User-contributed bindings for personal use"
repository = "https://github.com/dginev/latexml-oxide"

[lints]
workspace = true

# `log` is referenced only through the `Warn!`/`Error!` macro expansions in the
# runtime-bindings Rhai engine, so it never appears as a literal `log` token in
# this crate's source — cargo-machete therefore reports a false positive.
[package.metadata.cargo-machete]
ignored = ["log"]

[lib]
crate-type = ["lib"]

[features]
# Source-map precision build — propagates to latexml_core. Enable via
# `latexml_oxide/token-locators`. See docs/performance/SOURCE_PROVENANCE.md §3.1.1.
token-locators = ["latexml_core/token-locators"]
# Runtime script bindings (docs/parity/script_bindings_plan.md). Named for the
# capability (bindings loaded at runtime), not the engine. Embeds the
# pure-Rust Rhai interpreter so users can contribute package/class bindings
# at runtime (no toolchain, no recompile) at an interpreted-speed cost. The
# ONLY place Rhai enters the workspace; core/engine/package untouched.
runtime-bindings = ["dep:rhai", "dep:log"]

[dependencies]
latexml_core = {path = "../latexml_core", version = "0.4.0"}
latexml_codegen = {path = "../latexml_codegen", version = "0.4.0"}
latexml_engine = {path = "../latexml_engine", version = "0.5.0"}
latexml_package = {path = "../latexml_package", version = "0.5.0"}
rustc-hash = "2.0.0"
libxml = "0.3.16"
regex = { version = "1.7.1", default-features = false, features = ["std", "perf", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script"] }
# Optional — only compiled under `runtime-bindings`. Pure Rust, no native deps.
rhai = { version = "1", optional = true, features = ["no_module", "no_time"] }
# Optional — only the runtime-bindings Rhai engine (`script_bindings/engine.rs`)
# references `log`, via the `Warn!`/`Error!` macro expansions. Gated under
# `runtime-bindings` so default builds don't pull it (it was previously an
# always-on dependency that cargo-machete flagged as unused in default builds).
log = { version = "0.4", optional = true }
# Doc/test-only: `metadata` turns on Rhai's reflections API
# (`Engine::gen_fn_signatures`), which is how `script_bindings/API.md` is
# generated and kept honest. It pulls serde + serde_json, so it must NEVER reach
# the shipped binary — under `resolver = "2"` a dev-dependency's features are not
# unified into a normal build, so `cargo build --release` stays serde-free.
[dev-dependencies]
rhai = { version = "1", features = ["no_module", "no_time", "metadata"] }
