[package]
name = "latexml_core"
version = "0.3.0"
edition = "2021"
license = "CC0"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
description = "Core conversion capabilities of latexml_oxide"

[lib]
name = "latexml_core"
crate-type = ["lib"]

[dependencies]
once_cell = "1.17.0"
regex = "1.7.1"
log = "0.4"
quote = "1.0"
proc-macro2 = "1.0"
libxml = "0.3.10"
# (replaced `dirs` 2026-05-17 — its single use was `dirs::home_dir()`,
# which on Linux is exactly `std::env::var_os("HOME")`. On Windows
# dirs falls back to `SHGetKnownFolderPath`; not relevant for us.)
kpathsea = "0.2.5"
unidecode = "0.3.0"
rustc-hash = "2.0.0"
string-interner = { version = "0.20.0", default-features = false, features = ["std", "backends", "inline-more"] }
marpa = { git = "https://github.com/dginev/marpa" }
unicode-normalization = "0.1.25"
stacker = "0.1.24"
