[package]
name = "latexml_core"
version = "0.3.0"
edition = "2021"
license = "CC0"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
description = "Core conversion capabilities of latexml_oxide"

[lib]
name = "latexml_core"
crate-type = ["lib"]

[features]
# Activated by `latexml_codegen` (host-side proc-macro) to enable the
# `impl ToTokens for Tokens / Catcode / Token / Parameters / Parameter`
# blocks. Resolver v2 isolates proc-macro feature unification, so the
# runtime `latexml_core` (linked into `latexml_oxide` and friends) does
# NOT get this feature — dropping `proc-macro2` (~93 KiB) and `quote`
# from the runtime binary's dependency graph. Audit DEP-14 (2026-05-18).
codegen = ["dep:proc-macro2", "dep:quote"]

[dependencies]
once_cell = "1.17.0"
regex = "1.7.1"
log = "0.4"
quote = { version = "1.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }
libxml = "0.3.10"
# (replaced `dirs` 2026-05-17 — its single use was `dirs::home_dir()`,
# which on Linux is exactly `std::env::var_os("HOME")`. On Windows
# dirs falls back to `SHGetKnownFolderPath`; not relevant for us.)
kpathsea = "0.2.5"
unidecode = "0.3.0"
rustc-hash = "2.0.0"
string-interner = { version = "0.20.0", default-features = false, features = ["std", "backends", "inline-more"] }
marpa = { git = "https://github.com/dginev/marpa", branch = "perf/asf-allocation-trim" }
unicode-normalization = "0.1.25"
stacker = "0.1.24"
