[package]
name = "latexml_core"
version = "0.4.0"
edition = "2021"
license = "CC0"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
description = "Core conversion capabilities of latexml_oxide"

[lib]
name = "latexml_core"
crate-type = ["lib"]

[features]
# Activated by `latexml_codegen` (host-side proc-macro) to enable the
# `impl ToTokens for Tokens / Catcode / Token / Parameters / Parameter`
# blocks. Resolver v2 isolates proc-macro feature unification, so the
# runtime `latexml_core` (linked into `latexml_oxide` and friends) does
# NOT get this feature — dropping `proc-macro2` (~93 KiB) and `quote`
# from the runtime binary's dependency graph. Audit DEP-14 (2026-05-18).
codegen = ["dep:proc-macro2", "dep:quote"]

# Opt-in source-map precision build (docs/SOURCE_PROVENANCE.md §3.1.1): widen
# `Token` with a `u32` origin handle so each token carries its exact source start
# through expansion to digestion. OFF by default — `Token` stays 8 bytes for every
# normal/corpus/parity/distribution build; only this build pays 8→12. Declared in
# every token-constructing crate and propagated from `latexml_oxide` so the cfg
# resolves consistently inside cross-crate macro expansions.
token-locators = []

[dependencies]
once_cell = "1.17.0"
# Trimmed regex unicode features — see DEP-10 note in
# latexml_codegen/Cargo.toml. Same set across the workspace.
regex = { version = "1.7.1", default-features = false, features = ["std", "perf", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script"] }
log = "0.4"
quote = { version = "1.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }
libxml = "0.3.12"
# (replaced `dirs` 2026-05-17 — its single use was `dirs::home_dir()`,
# which on Linux is exactly `std::env::var_os("HOME")`. On Windows
# dirs falls back to `SHGetKnownFolderPath`; not relevant for us.)
# 0.3: backend-dispatched — in-process libkpathsea when linked at build
# time, subprocess-kpsewhich fallback otherwise (MacTeX ships no
# libkpathsea at all; see docs/PORTABILITY_MACOS_PROBE_2026-06-07.md).
# Resolved from git via the workspace [patch.crates-io] until 0.3 is
# published to crates.io.
kpathsea = "0.3"
unidecode = "0.3.0"
rustc-hash = "2.0.0"
string-interner = { version = "0.20.0", default-features = false, features = ["std", "backends", "inline-more"] }
marpa = { git = "https://github.com/dginev/marpa" }
unicode-normalization = "0.1.25"
stacker = "0.1.24"
