[package]
name = "latexml_engine"
version = "0.4.0"
edition = "2021"
license = "CC0"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
description = "Core TeX/LaTeX engine bindings (Base, TeX_*, eTeX, pdfTeX, plain, latex pools). Split out of latexml_package to reduce CI compile-time RAM peaks."

[lib]
crate-type = ["lib"]

[dependencies]
once_cell = "1.17.0"
regex = "1.7.1"
log = "0.4"
libxml = "0.3.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
unicode-normalization = "0.1.7"
rustc-hash = "2.0.0"
latexml_codegen = { path = "../latexml_codegen" }
latexml_core = { path = "../latexml_core" }
