[package]
name = "latexml_engine"
version = "0.4.0"
edition = "2021"
license = "CC0"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
description = "Core TeX/LaTeX engine bindings (Base, TeX_*, eTeX, pdfTeX, plain, latex pools). Split out of latexml_package to reduce CI compile-time RAM peaks."

[lib]
crate-type = ["lib"]

[build-dependencies]
# Compress the bundled TeXLive kernel dumps at build time so the
# binary carries ~870 KB instead of ~7.5 MB of `.rodata` (DEP-12,
# 2026-05-18). gzip on the dumps' record-based text gets ~4.7×.
flate2 = "1"

[dependencies]
once_cell = "1.17.0"
regex = "1.7.1"
log = "0.4"
libxml = "0.3.11"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
unicode-normalization = "0.1.7"
rustc-hash = "2.0.0"
# Runtime gunzip of the embedded dumps from `build.rs` (DEP-12).
# Same flate2 instance the binary already pulls via zip/tar.
flate2 = "1"
latexml_codegen = { path = "../latexml_codegen" }
latexml_core = { path = "../latexml_core" }
